# ChangeLog for kde-base/kdebase-startkde
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase-startkde/ChangeLog,v 1.101 2008/01/24 13:53:27 armin76 Exp $

  24 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  kdebase-startkde-3.5.7-r1.ebuild:
  alpha/ia64/sparc stable wrt #207203

  23 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
  kdebase-startkde-3.5.7-r1.ebuild:
  Marked stable on amd64 as per bug 207203.

  23 Jan 2008; Markus Meier <maekke@gentoo.org>
  kdebase-startkde-3.5.7-r1.ebuild:
  x86 stable, bug #207203

  18 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/gentoo-startkde.patch:
  Added patches.

*kdebase-startkde-4.0.0 (17 Jan 2008)

  17 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kdebase-startkde-4.0.0.ebuild:
  Added KDE 4.0.0's kdebase-startkde.

*kdebase-startkde-3.5.8-r1 (09 Dec 2007)
*kdebase-startkde-3.5.7-r1 (09 Dec 2007)

  09 Dec 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +kdebase-startkde-3.5.7-r1.ebuild, +kdebase-startkde-3.5.8-r1.ebuild:
  Added patches by Bo Ørsted Andresen to allow for co-existence of both KDE
  3.5 and 4. Thanks, Bo!

*kdebase-startkde-3.5.8 (19 Oct 2007)

  19 Oct 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +kdebase-startkde-3.5.8.ebuild:
  Bump to KDE 3.5.8.

  11 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  kdebase-startkde-3.5.7.ebuild:
  x86 stable wrt #185823

  10 Aug 2007; Christoph Mende <angelos@gentoo.org>
  kdebase-startkde-3.5.7.ebuild:
  Stable on amd64 wrt bug #176297

  09 Aug 2007; Markus Rothe <corsair@gentoo.org>
  kdebase-startkde-3.5.7.ebuild:
  Stable on ppc64; bug #176297

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  kdebase-startkde-3.5.7.ebuild:
  alpha/ia64 stable wrt #176297

  08 Aug 2007; Joseph Jezak <josejx@gentoo.org>
  kdebase-startkde-3.5.7.ebuild:
  Marked ppc stable.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  kdebase-startkde-3.5.7.ebuild: