@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdebase-startkde
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase-startkde/ChangeLog,v 1.101 2008/01/24 13:53:27 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase-startkde/ChangeLog,v 1.102 2008/01/24 18:32:11 nixnut Exp $
+
+  24 Jan 2008; nixnut <nixnut@gentoo.org> kdebase-startkde-3.5.7-r1.ebuild:
+  Stable on ppc wrt bug 207203
 
   24 Jan 2008; Raúl Porcel <armin76@gentoo.org>
   kdebase-startkde-3.5.7-r1.ebuild:
